<?xml version="1.0"?>
<package format="2">
  <name>nucleus_driver_ros1</name>
  <version>0.0.0</version>
  <description>This is a ros2 packege that builds on the Nucleus Driver. The pacakge consists of the nucleus_node which maps the functionality of the nucleus driver to a ros2 interface allowing communication to a Nucleus device over a ros2 environment</description>

  <maintainer email="martin.johansen@nortekgroup.com">martin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>